# egm_analyzer

./: .copier-answers.yml  .gitignore  .mypy.ini  README.md  pyproject.toml
egm_analyzer/: cli.py  pred_processor.py  predictions_postprocess.py  signal_processor.py  types.py
egm_analyzer/cli/: analyze_egm.py  analyze_egm_many.py  calculate_metrics.py
egm_analyzer/gui/: egm_analyzer.py  error_analyzer.py
egm_analyzer/models/: model.py  onnx_wrapper.py  torch_wrapper.py
notebooks/: error_analyzer.ipynb
