[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
name = "egm_analyzer"
authors = [
    {name = "Anton Rybkin"},
    {name = "Ruslan Smirnov"},
]
description = "Tool for electrogram analysis (heartbeat detection for now)"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "onnxruntime-gpu",
    "pydantic",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
]
gui = [
    "dearpygui"
]
dev = [
    "egm_analyzer[test,gui]",
    "flake8",
    "mypy",
    "pre-commit",
    "types-tqdm",
]

[tool.setuptools.packages.find]
exclude = ["test"]

[tool.setuptools.package-data]
egm_analyzer = ["py.typed"]

[project.scripts]
analyze_egm = "egm_analyzer.cli.analyze_egm:main"
calculate_metrics = "egm_analyzer.cli.calculate_metrics:main"
analyze_errors = "egm_analyzer.gui.error_analyzer:main"
start_analyze = "egm_analyzer.gui.egm_analyzer:main"
